--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,3 +1,12 @@
 body {
   font-family: Mulish, sans-serif;
 }
+
+.article {
+  ul {
+    list-style-type: disc;
+    padding-left: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
