--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,10 +3,21 @@ body {
 }
 
 .article {
-  ul {
-    list-style-type: disc;
+  ul, ol {
     padding-left: 2rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style-type: decimal;
+  }
+
+  p {
     margin-bottom: 1rem;
   }
 }
